--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -15,20 +15,71 @@
         android:paddingRight="30dp"
         android:paddingBottom="10dp">
 
-        <Button
-            android:id="@+id/switchmode_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Choose another mode"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/details_container_inner" />
+        <Spinner
+            android:id="@+id/paneldetails_mode_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/details_container_inner"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/switchmode_button"
-            app:layout_constraintHeight_default="wrap"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/Randomize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Randomize" />
+
+            <Switch
+                android:id="@+id/paneldetails_randomize_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Switch" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/Synchronize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Synchronize" />
+
+            <Switch
+                android:id="@+id/paneldetails_synchronize_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Switch" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/paneldetails_palette_display"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Palette:" />
+
+            <TextView
+                android:id="@+id/paneldetails_palette_name_display"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Loading..." />
+        </LinearLayout>
+
     </LinearLayout>
 </layout>
