--- a/app/src/main/res/layout/service_listview_item.xml
+++ b/app/src/main/res/layout/service_listview_item.xml
@@ -9,10 +9,20 @@
     tools:layout_editor_absoluteX="30dp"
     tools:layout_editor_absoluteY="30dp">
 
+    <com.example.nanoleafdiy.utils.SquareImageView
+        android:id="@+id/service_listviewitem_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
+
     <TextView
-        android:id="@+id/service_listviewitem"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/service_listviewitem_text"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
+        android:ellipsize="marquee"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:paddingTop="10px"
+        android:paddingBottom="10px"
         android:text="Loading" />
 </LinearLayout>
