--- a/app/src/main/res/layout/service_listview_item.xml
+++ b/app/src/main/res/layout/service_listview_item.xml
@@ -2,27 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp"
     android:weightSum="10"
-    tools:layout_editor_absoluteX="30dp"
-    tools:layout_editor_absoluteY="30dp">
+    android:gravity="center">
 
     <com.example.nanoleafdiy.utils.SquareImageView
         android:id="@+id/service_listviewitem_icon"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_weight="7.5" />
 
     <TextView
         android:id="@+id/service_listviewitem_text"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:ellipsize="marquee"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:paddingTop="10px"
-        android:paddingBottom="10px"
-        android:text="Loading" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2.5"
+        android:paddingStart="10dp"
+        android:text="Loading"
+        android:textAlignment="center" />
+
 </LinearLayout>
